--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Available Animals</h1>
+   
     <div class="column">
+      <img src=https://www.cat-breeds-encyclopedia.com/images/xPersian-Cat-portrait.jpg.pagespeed.ic.HlFvSns8__.jpg alt="persian cat">
       <h2>Fluffy</h2>
       <p>Persian Cat, 5mos old</p>
       <ul>
@@ -17,8 +19,9 @@
     </div>
 
     <div class="column">
+      <img src=https://ae01.alicdn.com/kf/HTB1cjPFXfLsK1Rjy0Fbq6xSEXXa5.jpg alt="Pitbull">
       <h2>Sally</h2>
-      <p>Pit Bull, 3mos old</p>
+      <p>Pitbull, 3mos old</p>
       <ul>
         <li>Spot</li>
         <li>Squirt</li>
@@ -27,6 +30,7 @@
     </div>
 
     <div class="column">
+      <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSnPr7CUBSVcu14Gxy0IUppF_qPG9dBU7Q7Csi9gysHR-ZkZmgV&usqp=CAU alt="Chocolate Lab">
       <h2>Bruce</h2>
       <p>Chocolate Lab, 2yrs old</p>
       <ul>
