add favorites copy

--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -12,9 +12,9 @@
       <h2>Fluffy</h2>
       <p>Persian Cat, 5mos old</p>
       <ul>
-        <li>Fluffy</li>
-        <li>Floofy</li>
-        <li>Flubber</li>
+        <li>Favorite food: Treats</li>
+        <li>Favorite activity: Naps</li>
+        <li>Favorite Song: Hates Music</li>
       </ul>
     </div>
 
@@ -23,9 +23,9 @@
       <h2>Sally</h2>
       <p>Pitbull, 3mos old</p>
       <ul>
-        <li>Spot</li>
-        <li>Squirt</li>
-        <li>Sally</li>
+        <li>Favorite food: Cereal</li>
+        <li>Favorite activity: Snuggles</li>
+        <li>Favorite song: I'm Every Woman</li>
       </ul>
     </div>
 
@@ -34,9 +34,9 @@
       <h2>Bruce</h2>
       <p>Chocolate Lab, 2yrs old</p>
       <ul>
-        <li>Larry</li>
-        <li>Luke</li>
-        <li>Lisa</li>
+        <li>Favorite food: Pizza</li>
+        <li>Favorite activity: Swimming</li>
+        <li>Favorite song: Who Let the Dogs Out</li>
       </ul>
     </div>
   </body>
